[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Pause.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 0.486275 )
self_modulate = Color( 1, 1, 1, 0.533333 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.2378
margin_top = -219.808
margin_right = 12.7622
margin_bottom = -199.808
rect_scale = Vector2( 1.93245, 1.93245 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.2378
margin_top = -123.808
margin_right = 12.7622
margin_bottom = -103.808
rect_scale = Vector2( 1.93245, 1.93245 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.2378
margin_top = -27.8079
margin_right = 12.7622
margin_bottom = -7.80786
rect_scale = Vector2( 1.96675, 1.96675 )
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.2378
margin_top = 76.1922
margin_right = 12.7623
margin_bottom = 96.1922
rect_scale = Vector2( 1.94014, 1.94014 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearGameData" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = 172.0
margin_right = 14.0
margin_bottom = 192.0
rect_scale = Vector2( 1.94014, 1.94014 )
text = "Clear Game Data"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="ClearGameData" to="." method="_on_ClearGameData_pressed"]
